--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
                      each headshot below. Images are located in the
                      ``img/weybec/`` directory. -->
       <li>
-        <img class="headshot" src="img/weybec/pratik_solanki.jpg" alt="Pratik Solanki headshot"><b><br> Pratik Solanki<br> Co-Founder
+        <img class="headshot" src="img/weybec/pratik_solanki1.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" alt="Pratik Solanki headshot"><b><br> Pratik Solanki<br> Co-Founder
       </li>
       <li>
-        <img class="headshot" src="img/weybec/Nita-ravalji1.jpg" alt="Nita Ravalji headshot"><br> Nita Ravalji<br> Co-Founder
+        <img class="headshot" src="img/weybec/Nita-ravalji2.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" alt="Nita Ravalji headshot"><br> Nita Ravalji<br> Co-Founder
       </li>
       <li>
-        <img class="headshot" src="img/weybec/niyal_parmar.jpg" alt="Niyal Parmar headshot"><br> Niyal Parmar<br> Co-Founder
+        <img class="headshot" src="img/weybec/niyal_parmar2.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" alt="Niyal Parmar headshot"><br> Niyal Parmar<br> Co-Founder
+      <p style="clear: both;">
       </b>
       </li>
     </ul>
