--- a/index.html
+++ b/index.html
@@ -75,25 +75,34 @@
     <p class="lead"><b><i>Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Exploring his new superpowers, Monkaa zooms through an entire universe.</b></i>
     </p>
 
-    <div class="pratik">
+
+    <div style="width:80%;margin:auto;text-align:center;">
       <div style="float: left; width: 30%">
-        <img class="headshot" src="img/weybec/pratik_solanki1.jpg" alt="Pratik Solanki headshot"><b><br>
-        <div style="margin: auto; width: 205px;">Pratik Solanki<br> Co-Founder</div>
-        </div>
-        <div class="nita">
-        <div style="float: left; width: 30%">
-        <img class="headshot" src="img/weybec/Nita-ravalji2.jpg" alt="Nita Ravalji headshot"><b><br> 
-          </div>
-          <div style="margin: auto; width: 205px;">Nita Ravalji<br> Co-Founder</div>
-        </div>
-          <div class="niyal">
-          <div style="float: left; width: 30%">
-        <img class="headshot" src="img/weybec/niyal_parmar2.jpg" alt="Niyal Parmar headshot"><b><br>
-            </div>
-            <div style="margin: auto; width: 205px;">Niyal Parmar<br> Co-Founder</div>
-            </b>
+        <img class="headshot" src="img/weybec/pratik_solanki1.jpg" alt="Pratik Solanki headshot">
+        <br>
+        <div style="margin: auto; width: 205px;">Pratik Solanki
+          <br> Co-Founder</div>
       </div>
-      <br style="clear: left;">
+
+      <div style="float: left; width: 30%">
+        <img class="headshot" src="img/weybec/Nita-ravalji2.jpg" alt="Nita Ravalji headshot">
+        <br>
+        <div style="margin: auto; width: 205px;">Nita Ravalji
+          <br> Co-Founder</div>
+      </div>
+
+
+      <div style="float: left; width: 30%">
+        <img class="headshot" src="img/weybec/niyal_parmar2.jpg" alt="Niyal Parmar headshot">
+        <br>
+
+        <div style="margin: auto; width: 205px;">Niyal Parmar
+          <br> Co-Founder</div>
+      </div>
+
+
+      <div style="clear:left;"></div>
+
     </div>
 
     <p id="info">Monkaa is produced by <a href="http://www.weybec.com/">Weybec</a>, an animation studio located in Mumbai, India and founded by Pratik Solanki, Nita Ravalji and Niyal Parmar.</p>
