changed font styling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <section id="about">
     <h2>About</h2>
-    <p class="lead"><b><i>Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Exploring his new superpowers, Monkaa zooms through an entire universe.</b></i>
+    <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Exploring his new superpowers, Monkaa zooms through an entire universe.
     </p>
 
 
